{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 1091,
  "lineage": "f7e0a1e6-235b-935e-b82f-00b712657db3",
  "resources": [
    {
      "module": "module.ec2[\"unicorn-bastion\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f89770ba7623b473",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-0f89770ba7623b473",
            "associate_with_private_ip": "10.97.0.171",
            "association_id": "eipassoc-039047571bd43de32",
            "domain": "vpc",
            "id": "eipalloc-0f89770ba7623b473",
            "instance": "i-05fd9561e14a4ae4e",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-092503ec8e274649b",
            "private_dns": "ip-10-97-0-171.ap-northeast-2.compute.internal",
            "private_ip": "10.97.0.171",
            "public_dns": "ec2-13-125-66-228.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.66.228",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-bastion-eip"
            },
            "tags_all": {
              "Name": "unicorn-bastion-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-0f89770ba7623b473",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_instance.this",
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ssm_parameter.latest_ami",
            "module.ec2.tls_private_key.this",
            "module.endpoint.aws_vpc_endpoint.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"unicorn-bastion\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b08702f8675347e1",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:instance/i-05fd9561e14a4ae4e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "unicorn-bastion-profile",
            "id": "i-05fd9561e14a4ae4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "unicorn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-092503ec8e274649b"
              }
            ],
            "primary_network_interface_id": "eni-092503ec8e274649b",
            "private_dns": "ip-10-97-0-171.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.97.0.171",
            "public_dns": "ec2-43-203-221-17.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.221.17",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f4398d6ccf57efc2",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f0a8e182ed560f2",
            "tags": {
              "Name": "unicorn-bastion"
            },
            "tags_all": {
              "Name": "unicorn-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d6327046283b04a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "i-05fd9561e14a4ae4e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.ec2.aws_iam_instance_profile.this",
            "module.ec2.aws_iam_role.this",
            "module.ec2.aws_key_pair.this",
            "module.ec2.aws_security_group.this",
            "module.ec2.data.aws_ssm_parameter.latest_ami",
            "module.ec2.tls_private_key.this",
            "module.endpoint.aws_vpc_endpoint.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"unicorn-bastion\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-07d6327046283b04a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-07d6327046283b04a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "unicorn-bastion-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-bastion-sg"
            },
            "tags_all": {
              "Name": "unicorn-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-07d6327046283b04a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.endpoint.aws_vpc_endpoint.this",
            "module.file.aws_s3_bucket.this",
            "module.file.null_resource.ecr",
            "module.file.null_resource.eks",
            "module.file.null_resource.scripts",
            "module.file.random_string.this",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoint[\"ecr.api\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc-endpoint/vpce-05ca64389a0bb0747",
            "dns_entry": [
              {
                "dns_name": "vpce-05ca64389a0bb0747-nktibo4f.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-05ca64389a0bb0747-nktibo4f-ap-northeast-2c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-05ca64389a0bb0747-nktibo4f-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-05ca64389a0bb0747-nktibo4f-ap-northeast-2b.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0936725999X8FSNQD5H"
              },
              {
                "dns_name": "ecr.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z067399420FBMN2PYLF9P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05ca64389a0bb0747",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-005864f09d0029be0",
              "eni-03e8967a422fa62ce",
              "eni-0995dbe13047bee8b"
            ],
            "owner_id": "076472864721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b78707f927f2164"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.97.10.167",
                "subnet_id": "subnet-02260d7c68cbb984f"
              },
              {
                "ipv4": "10.97.11.132",
                "subnet_id": "subnet-017a190cb8acbaf25"
              },
              {
                "ipv4": "10.97.12.206",
                "subnet_id": "subnet-0214e399d08f1f5af"
              }
            ],
            "subnet_ids": [
              "subnet-017a190cb8acbaf25",
              "subnet-0214e399d08f1f5af",
              "subnet-02260d7c68cbb984f"
            ],
            "tags": {
              "Name": "unicorn-ecr-api-ep"
            },
            "tags_all": {
              "Name": "unicorn-ecr-api-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpce-05ca64389a0bb0747",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoint[\"ecr.dkr\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc-endpoint/vpce-0e5a9a89b2142b169",
            "dns_entry": [
              {
                "dns_name": "vpce-0e5a9a89b2142b169-43c3n7m9.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e5a9a89b2142b169-43c3n7m9-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e5a9a89b2142b169-43c3n7m9-ap-northeast-2b.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e5a9a89b2142b169-43c3n7m9-ap-northeast-2c.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z06727893IHG69UNKUH45"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z06727893IHG69UNKUH45"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z0675347KESNIWDRUBGZ"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z0675347KESNIWDRUBGZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e5a9a89b2142b169",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06249874f58311ec8",
              "eni-0aae24fadf40c7314",
              "eni-0bd1fa2e2912f402d"
            ],
            "owner_id": "076472864721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-02b78707f927f2164"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.97.10.225",
                "subnet_id": "subnet-02260d7c68cbb984f"
              },
              {
                "ipv4": "10.97.11.14",
                "subnet_id": "subnet-017a190cb8acbaf25"
              },
              {
                "ipv4": "10.97.12.12",
                "subnet_id": "subnet-0214e399d08f1f5af"
              }
            ],
            "subnet_ids": [
              "subnet-017a190cb8acbaf25",
              "subnet-0214e399d08f1f5af",
              "subnet-02260d7c68cbb984f"
            ],
            "tags": {
              "Name": "unicorn-ecr-dkr-ep"
            },
            "tags_all": {
              "Name": "unicorn-ecr-dkr-ep"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpce-0e5a9a89b2142b169",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoint[\"s3\"]",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc-endpoint/vpce-0c2d71ef5f45d3ee5",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c2d71ef5f45d3ee5",
            "ip_address_type": "ipv4",
            "owner_id": "076472864721",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-021e193b33afa9544",
              "rtb-074b29ad368b94de7",
              "rtb-0f9978dfed07ea695"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "unicorn-s3-ep"
            },
            "tags_all": {
              "Name": "unicorn-s3-ep"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpce-0c2d71ef5f45d3ee5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"unicorn-alb-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0369b9510a25e0ebf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0369b9510a25e0ebf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-22a6434b"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "unicorn-alb-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-alb-sg"
            },
            "tags_all": {
              "Name": "unicorn-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0369b9510a25e0ebf",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"unicorn-eks-control-plane-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-060de5fc87fcd119b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060de5fc87fcd119b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "unicorn-eks-control-plane-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-eks-control-plane-sg"
            },
            "tags_all": {
              "Name": "unicorn-eks-control-plane-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-060de5fc87fcd119b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"unicorn-endpoint-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-02b78707f927f2164",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b78707f927f2164",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "unicorn-endpoint-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-endpoint-sg"
            },
            "tags_all": {
              "Name": "unicorn-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-02b78707f927f2164",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"unicorn-mark-sg\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0dd842442f8940931",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd842442f8940931",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "unicorn-mark-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-mark-sg"
            },
            "tags_all": {
              "Name": "unicorn-mark-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0dd842442f8940931",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "data.aws_ec2_managed_prefix_list.cloudfront",
            "module.vpc.aws_default_route_table.this",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_route_table_association.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-0967b87f8dd00d263",
            "default_route_table_id": "rtb-0967b87f8dd00d263",
            "id": "rtb-0967b87f8dd00d263",
            "owner_id": "076472864721",
            "propagating_vgws": null,
            "region": "ap-northeast-2",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:security-group/sg-0a37de268a97b7601",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0a37de268a97b7601",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-default-sg"
            },
            "tags_all": {
              "Name": "unicorn-default-sg"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0543703df1f6bfb96",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-0543703df1f6bfb96",
            "domain": "vpc",
            "id": "eipalloc-0543703df1f6bfb96",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-125-78-154.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.78.154",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-0-eip"
            },
            "tags_all": {
              "Name": "public-0-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-0543703df1f6bfb96",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c07037c21a6f5ef",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-01c07037c21a6f5ef",
            "domain": "vpc",
            "id": "eipalloc-01c07037c21a6f5ef",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-191-34.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.191.34",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-1-eip"
            },
            "tags_all": {
              "Name": "public-1-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-01c07037c21a6f5ef",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07026f2a2876cad2b",
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:elastic-ip/eipalloc-07026f2a2876cad2b",
            "domain": "vpc",
            "id": "eipalloc-07026f2a2876cad2b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-234-4.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.234.4",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-2-eip"
            },
            "tags_all": {
              "Name": "public-2-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "eipalloc-07026f2a2876cad2b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:internet-gateway/igw-0e9767e3df5b959ef",
            "id": "igw-0e9767e3df5b959ef",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-igw"
            },
            "tags_all": {
              "Name": "unicorn-igw"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-0e9767e3df5b959ef",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0543703df1f6bfb96",
            "association_id": "eipassoc-0ef6ec7d357c6efd9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0080eb018d43b1f4c",
            "network_interface_id": "eni-09a8de08f5e2bd689",
            "private_ip": "10.97.0.252",
            "public_ip": "13.125.78.154",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f0a8e182ed560f2",
            "tags": {
              "Name": "unicorn-nat-a"
            },
            "tags_all": {
              "Name": "unicorn-nat-a"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0080eb018d43b1f4c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c07037c21a6f5ef",
            "association_id": "eipassoc-04dd5a094803d18e6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b3ac72f67cebd282",
            "network_interface_id": "eni-0ab672f136814c366",
            "private_ip": "10.97.1.250",
            "public_ip": "43.202.191.34",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0491ec1ffd54025b7",
            "tags": {
              "Name": "unicorn-nat-b"
            },
            "tags_all": {
              "Name": "unicorn-nat-b"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0b3ac72f67cebd282",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07026f2a2876cad2b",
            "association_id": "eipassoc-050d9dac38326105c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0c8a3f18240e28985",
            "network_interface_id": "eni-0323e2d6b7efda60b",
            "private_ip": "10.97.2.142",
            "public_ip": "3.36.234.4",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fda81b1c73c697c2",
            "tags": {
              "Name": "unicorn-nat-c"
            },
            "tags_all": {
              "Name": "unicorn-nat-c"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "nat-0c8a3f18240e28985",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-074b29ad368b94de71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0080eb018d43b1f4c",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-074b29ad368b94de7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-074b29ad368b94de7"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021e193b33afa95441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b3ac72f67cebd282",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-021e193b33afa9544",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-021e193b33afa9544"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f9978dfed07ea6951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8a3f18240e28985",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f9978dfed07ea695",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f9978dfed07ea695"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9767e3df5b959ef",
            "id": "r-rtb-009bee81b7a82a1431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-009bee81b7a82a143",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-009bee81b7a82a143"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_eip.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-074b29ad368b94de7",
            "id": "rtb-074b29ad368b94de7",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "unicorn-rt-priv-a"
            },
            "tags_all": {
              "Name": "unicorn-rt-priv-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-074b29ad368b94de7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-021e193b33afa9544",
            "id": "rtb-021e193b33afa9544",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "unicorn-rt-priv-b"
            },
            "tags_all": {
              "Name": "unicorn-rt-priv-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-021e193b33afa9544",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-0f9978dfed07ea695",
            "id": "rtb-0f9978dfed07ea695",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "unicorn-rt-priv-c"
            },
            "tags_all": {
              "Name": "unicorn-rt-priv-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-0f9978dfed07ea695",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:route-table/rtb-009bee81b7a82a143",
            "id": "rtb-009bee81b7a82a143",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "unicorn-rt-pub"
            },
            "tags_all": {
              "Name": "unicorn-rt-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-009bee81b7a82a143",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e8880cd486d23ae",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-074b29ad368b94de7",
            "subnet_id": "subnet-02260d7c68cbb984f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-02e8880cd486d23ae",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045b50effaa136a59",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-021e193b33afa9544",
            "subnet_id": "subnet-017a190cb8acbaf25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-045b50effaa136a59",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ee5726873efff51",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f9978dfed07ea695",
            "subnet_id": "subnet-0214e399d08f1f5af"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-04ee5726873efff51",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c17586fe1ec97ea5",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-009bee81b7a82a143",
            "subnet_id": "subnet-02f0a8e182ed560f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0c17586fe1ec97ea5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e918c47a56e05c6",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-009bee81b7a82a143",
            "subnet_id": "subnet-0491ec1ffd54025b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-06e918c47a56e05c6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082a91f1bd159504c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-009bee81b7a82a143",
            "subnet_id": "subnet-0fda81b1c73c697c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-082a91f1bd159504c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-02260d7c68cbb984f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.97.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02260d7c68cbb984f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-priv-a"
            },
            "tags_all": {
              "Name": "unicorn-subnet-priv-a"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-02260d7c68cbb984f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-017a190cb8acbaf25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.97.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a190cb8acbaf25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-priv-b"
            },
            "tags_all": {
              "Name": "unicorn-subnet-priv-b"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-017a190cb8acbaf25",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "private-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0214e399d08f1f5af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.97.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0214e399d08f1f5af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-priv-c"
            },
            "tags_all": {
              "Name": "unicorn-subnet-priv-c"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0214e399d08f1f5af",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-02f0a8e182ed560f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.97.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f0a8e182ed560f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-pub-a"
            },
            "tags_all": {
              "Name": "unicorn-subnet-pub-a"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-02f0a8e182ed560f2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0491ec1ffd54025b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.97.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0491ec1ffd54025b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-pub-b"
            },
            "tags_all": {
              "Name": "unicorn-subnet-pub-b"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0491ec1ffd54025b7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "public-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:subnet/subnet-0fda81b1c73c697c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.97.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda81b1c73c697c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-subnet-pub-c"
            },
            "tags_all": {
              "Name": "unicorn-subnet-pub-c"
            },
            "vpc_id": "vpc-03fe8a616edc41d3d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-0fda81b1c73c697c2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "data.aws_availability_zones.az",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"unicorn-vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:076472864721:vpc/vpc-03fe8a616edc41d3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.97.0.0/16",
            "default_network_acl_id": "acl-0ea540ed3fa07bbc6",
            "default_route_table_id": "rtb-0967b87f8dd00d263",
            "default_security_group_id": "sg-0a37de268a97b7601",
            "dhcp_options_id": "dopt-0fbfcfc3054692110",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fe8a616edc41d3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0967b87f8dd00d263",
            "owner_id": "076472864721",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "unicorn-vpc"
            },
            "tags_all": {
              "Name": "unicorn-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-03fe8a616edc41d3d",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}